crates/pgt_hover/tests/snapshots/column_hover.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select users.id from users
              ↑ hovered here
```

# Hover Results
### `public.users.id`  
#### `int4` - 🔑 primary key - not null  
---    
Default: `nextval('users_id_seq'::regclass)`
