crates/pgt_hover/tests/snapshots/column_hover_quoted_schema_table.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select "auth"."user_profiles".first_name from "auth"."user_profiles"
                                     ↑ hovered here
```

# Hover Results
### `auth.user_profiles.first_name`  
```plain  
varchar(100) - nullable
  
```  
---    
```plain  
  
```
