crates/pgt_hover/tests/snapshots/function_with_schema.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select test_schema.schema_func('test')
                           ↑ hovered here
```

# Hover Results
### `test_schema.schema_func(text) → text`  
```plain  
Function - Stable - Security INVOKER  
```  
---    
```plain  

CREATE OR REPLACE FUNCTION test_schema.schema_func(text)
 RETURNS text
 LANGUAGE sql
 STABLE
AS $function$
            select $1 || ' processed';
        $function$

  
```
